--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.14.15",
+    "@mui/lab": "^5.0.0-alpha.151",
     "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@mui/styles": "^5.5.1",
@@ -31,7 +32,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-table": "^7.6.3",
+    "react-table": "^7.8.0",
     "reactstrap": "^8.9.0",
     "recharts": "^2.0.6",
     "redux": "^4.1.0",
