--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
+    "jwt-decode": "^4.0.0",
     "material-table": "^1.69.2",
     "query-string": "^7.1.3",
     "react": "^17.0.2",
