--- a/package.json
+++ b/package.json
@@ -4,35 +4,37 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.4",
-    "@mui/icons-material": "^5.14.15",
-    "@mui/lab": "^5.0.0-alpha.151",
-    "@mui/material": "^5.14.15",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
-    "@mui/styles": "^5.5.1",
+    "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/lab": "^5.0.0-alpha.61",
+    "@mui/material": "^5.2.3",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/styles": "^5.2.3",
+    "@mui/x-data-grid": "^5.2.2",
+    "@mui/x-date-pickers": "^5.0.0-alpha.6",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "apexcharts": "^3.44.0",
-    "axios": "^0.21.1",
+    "axios": "^1.6.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
-    "jwt-decode": "^4.0.0",
-    "material-table": "^1.69.2",
+    "jwt-decode": "^3.1.2",
+    "material-table": "^1.63.0",
     "query-string": "^7.1.3",
-    "react": "^17.0.2",
+    "react": "^17.0.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-modal": "^4.2.0",
     "react-client-session": "^0.0.7",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "reactstrap": "^8.9.0",
     "recharts": "^2.0.6",
